# ESG_Compitition

./: .gitignore  README.md  [External]_VeriPromiseESG_2026_ESG_Promise_Verification_Competition_Baseline_Code_ZH.ipynb  change.txt  exampleCode.ipynb  main.py  pyproject.toml  requirements.txt
data/: vpesg_4k_train_1000.csv  vpesg_4k_train_1000.json
notebooks/: Keyword Windowing.ipynb  baseline.ipynb  exp_YYYY-MM-DD_name.ipynb
results/Keyword Windowing/: prediction_Keyword Windowing.json
results/baseline/: prediction.json  predictions_baseline.json
